# WeChat

./: .gitignore  CMakeLists.txt  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.h
client/: CMakeLists.txt  CMakeUserPresets.json  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedoncelabel.cpp  clickedoncelabel.h  clicklabel.cpp  clicklabel.h  clickvisible.cpp  clickvisible.h  config.ini  contactuserlist.cpp  (+49 more)
client/style/: stylesheet.qss
server/: CMakeLists.txt  GateServer.cpp  LogicSystem.cpp  Makefile  const.h
server/ChatServer/: CMakeLists.txt
server/ChatServer/inc/: CSession.h  LogicSystem.h
server/ChatServer/src/: CServer.cpp  CSession.cpp  ChatServer.cpp  LogicSystem.cpp  MsgNode.cpp
server/ChatServer1/: CMakeLists.txt  Makefile  self.ini
server/ChatServer1/inc/: ChatGrpcClient.h  ChatServiceImpl.h  MsgNode.h
server/ChatServer1/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  ChatServiceImpl.cpp  LogicSystem.cpp  MsgNode.cpp  UserMgr.cpp
server/ChatServer2/: self.ini
server/ChatServer2/inc/: CServer.h  CSession.h  ChatGrpcClient.h  LogicSystem.h  UserMgr.h
server/ChatServer2/src/: CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatServer.cpp  LogicSystem.cpp  MsgNode.cpp  UserMgr.cpp
server/Common/: CMakeLists.txt  config.ini
server/Common/inc/: ConfigMgr.h  Logger.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RPCConPool.h  RedisMgr.h  StatusGrpcClient.h  const.h  data.h
server/Common/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
server/Common/src/: AsioIOContextPool.cpp  ConfigMgr.cpp  MysqlDao.cpp  MysqlMgr.cpp  MysqlPool.cpp  RedisConPool.cpp  RedisMgr.cpp  StatusGrpcClient.cpp
server/GateServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  Makefile  MysqlDao.h  MysqlMgr.h  MysqlPool.cpp  RPCConPool.cpp  RPCConPool.h  RedisConPool.cpp  RedisConPool.h  RedisMgr.cpp  RedisMgr.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.grpc.pb.cc  message.pb.cc
server/GateServer/.cache/clangd/index/: AsioIOContextPool.cpp.8347025E124C7BAE.idx  AsioIOContextPool.h.676B03D4E128C0BA.idx  CServer.cpp.B5CB84D196E5770D.idx  CServer.h.C45B4993021306BD.idx  ConfigMgr.cpp.FB42A24128EDF369.idx  ConfigMgr.h.F6C5962C131402B9.idx  GateServer.cpp.169002DEEE1F865A.idx  HttpConnection.cpp.D255A3EBACD6B59D.idx  HttpConnection.h.2CF124A8EFCA44F0.idx  LogicSystem.cpp.46F464A338735AC3.idx  LogicSystem.h.642C790A31E30B9B.idx  RPCConPool.cpp.8929D535FAB70FC0.idx  RPCConPool.h.B5793266C1B22D61.idx  RedisConPool.cpp.63321CF3A7DA71BC.idx  RedisConPool.h.FFD8D4F0EC10FC4C.idx  RedisMgr.cpp.B7F65A57380963CF.idx  RedisMgr.h.2AE0C215FA4BBA06.idx  Singleton.h.B3855411411C7FA6.idx  VerifyGrpcClient.cpp.CE62CAEAA8C9D56B.idx  VerifyGrpcClient.h.57F6BD638EB62C42.idx  const.h.8073A20136B7FF28.idx  message.grpc.pb.cc.D1413C0CD733B2D9.idx  message.grpc.pb.h.33BE10021D38FEB6.idx  message.pb.cc.B236DE764A487039.idx  message.pb.h.0B206FE351E25DA3.idx
server/GateServer/inc/: AsioIOContextPool.h  HttpConnection.h  LogicSystem.h  RPCConPool.h  Singleton.h  StatusGrpcClient.h  VerifyGrpcClient.h
server/GateServer/proto/: message.grpc.pb.h  message.pb.h
server/GateServer/src/: CServer.cpp  ConfigMgr.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp
server/StatusServer/: CMakeLists.txt  Makefile
server/StatusServer/inc/: StatusServiceImpl.h
server/StatusServer/src/: StatusServer.cpp  StatusServiceImpl.cpp
server/VerifyServer/: Makefile  config.json  email.js  package.json  pnpm-lock.yaml  redis.js  server.js
style/: stylesheet.qss
